feat(client,admin, offerTravel, agency & promotion) - integration complete - needs integration of translation - introduce API SendMail for new promotions modifications or added promotions