@@ -1,24 +1,34 @@
 package tn.esprit.easytripdesktopapp.controllers.Admin;
 
+import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
+import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
 import javafx.geometry.Pos;
+import javafx.scene.Node;
+import javafx.scene.Parent;
+import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.ComboBox;
+import javafx.scene.control.Label;
 import javafx.scene.control.TextField;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.VBox;
 import javafx.scene.text.Text;
+import javafx.stage.Stage;
 import tn.esprit.easytripdesktopapp.interfaces.CRUDService;
 import tn.esprit.easytripdesktopapp.models.OfferTravel;
 import tn.esprit.easytripdesktopapp.services.ServiceOfferTravel;
 
 import java.io.File;
+import java.io.IOException;
 import java.net.URL;
 import java.util.List;
+import java.util.Locale;
 import java.util.ResourceBundle;
+import java.util.stream.Collectors;
 
 public class AfficherOfferTravelController implements Initializable {
 
@@ -29,9 +39,12 @@ public class AfficherOfferTravelController implements Initializable {
     private ComboBox<String> offerComboBox; // Liste déroulante pour filtrer par destination
 
     @FXML
+    private ComboBox<String> agencyComboBox;
+
+    @FXML
     private TextField searchField;
 
-    private final CRUDService<OfferTravel> offerService = new ServiceOfferTravel();
+    private final ServiceOfferTravel offerService = new ServiceOfferTravel();
     private List<OfferTravel> allOffers;
 
     @Override
@@ -41,21 +54,34 @@ public class AfficherOfferTravelController implements Initializable {
         searchField.textProperty().addListener((observable, oldValue, newValue) -> handleSearch());
 
         offerComboBox.setOnAction(event -> filterOffers());
+        agencyComboBox.setOnAction(event -> filterByAgency()); // Ajout de l'événement pour filtrer par agence
     }
 
     private void loadData() {
         allOffers = offerService.getAll();
-        loadComboBox();
+        loadComboBoxes();
         loadOffers(allOffers);
     }
 
-    private void loadComboBox() {
+    private void loadComboBoxes() {
+        // Charger les destinations
         offerComboBox.getItems().clear();
         offerComboBox.getItems().add("Toutes les destinations"); // Option pour afficher tout
         for (OfferTravel offer : allOffers) {
             offerComboBox.getItems().add(offer.getDestination());
         }
         offerComboBox.getSelectionModel().selectFirst();
+
+        // Charger les agences
+        agencyComboBox.getItems().clear();
+        agencyComboBox.getItems().add("Toutes les agences"); // Option pour afficher tout
+        List<String> agencies = allOffers.stream()
+                .filter(o -> o.getAgence() != null)
+                .map(o -> o.getAgence().getNom())
+                .distinct()
+                .collect(Collectors.toList());
+        agencyComboBox.getItems().addAll(agencies);
+        agencyComboBox.getSelectionModel().selectFirst();
     }
 
     private void loadOffers(List<OfferTravel> offers) {
@@ -89,7 +115,7 @@ public class AfficherOfferTravelController implements Initializable {
         destinationText.getStyleClass().add("card-title");
         destinationText.setStyle("-fx-font-size: 18px; -fx-font-weight: bold;");
 
-        Text priceText = new Text("Prix : " + offer.getPrice() + " €");
+        Text priceText = new Text("Prix : " + offer.getPrice() + " DT");
         priceText.setStyle("-fx-font-size: 14px;");
 
         card.getChildren().addAll(imageView, destinationText, priceText);
@@ -100,7 +126,6 @@ public class AfficherOfferTravelController implements Initializable {
 
         return card;
     }
-
 
     @FXML
     private void filterOffers() {
@@ -113,7 +138,23 @@ public class AfficherOfferTravelController implements Initializable {
 
         List<OfferTravel> filteredOffers = allOffers.stream()
                 .filter(o -> o.getDestination().equals(selectedDestination))
-                .toList();
+                .collect(Collectors.toList());
+
+        loadOffers(filteredOffers);
+    }
+
+    @FXML
+    private void filterByAgency() {
+        String selectedAgency = agencyComboBox.getValue();
+
+        if (selectedAgency == null || selectedAgency.equals("Toutes les agences")) {
+            loadOffers(allOffers);
+            return;
+        }
+
+        List<OfferTravel> filteredOffers = allOffers.stream()
+                .filter(o -> o.getAgence() != null && o.getAgence().getNom().equals(selectedAgency))
+                .collect(Collectors.toList());
 
         loadOffers(filteredOffers);
     }
@@ -123,7 +164,7 @@ public class AfficherOfferTravelController implements Initializable {
         String keyword = searchField.getText().toLowerCase().trim();
         List<OfferTravel> filteredOffers = allOffers.stream()
                 .filter(o -> o.getDestination().toLowerCase().contains(keyword))
-                .toList();
+                .collect(Collectors.toList());
         loadOffers(filteredOffers);
     }
 
@@ -131,24 +172,61 @@ public class AfficherOfferTravelController implements Initializable {
         Alert detailAlert = new Alert(Alert.AlertType.INFORMATION);
         detailAlert.setTitle("Détails de l'Offre de Voyage");
         detailAlert.setHeaderText(null);
-        detailAlert.setContentText(
-                "🏝 Destination : " + offer.getDestination() +
-                        "\n🚉 Départ : " + offer.getDeparture() +
-                        "\n💰 Prix : " + offer.getPrice() + " €" +
-                        "\n🏨 Hôtel : " + offer.getHotelName() +
-                        "\n✈️ Vol : " + offer.getFlightName() +
-                        "\n📅 Départ : " + offer.getDeparture() + offer.getDeparture_date() + " - Arrivée : " + offer.getArrival_date() +
-                        "\n📖 Description : " + offer.getDiscription() +
-                        "\n🏢 Agence : " + (offer.getAgence() != null ? offer.getAgence().getNom() : "Non spécifiée") +
-                        "\n🎁 Promotion : " + (offer.getPromotion() != null ? offer.getPromotion().getTitle() : "Aucune") +
-                        "\n📂 Catégorie : " + offer.getCategory()
-        );
 
+        // Créer un VBox pour organiser l'image et les détails
+        VBox vbox = new VBox(10); // Espacement de 10 entre les éléments
+        vbox.setAlignment(Pos.CENTER); // Centrer le contenu
+
+        // Ajouter l'image
+        ImageView imageView = new ImageView();
+        imageView.setFitWidth(200); // Largeur de l'image
+        imageView.setFitHeight(200); // Hauteur de l'image
+        imageView.setPreserveRatio(true); // Conserver le ratio de l'image
+
+        String imagePath = offer.getImage();
+        File file = (imagePath != null) ? new File(imagePath) : null;
+
+        if (file != null && file.exists()) {
+            imageView.setImage(new Image(file.toURI().toString()));
+        } else {
+            // Image par défaut si l'image de l'offre n'est pas disponible
+            imageView.setImage(new Image("file:src/main/resources/images/default_offer.png"));
+        }
+
+        // Ajouter l'image au VBox
+        vbox.getChildren().add(imageView);
+
+        // Ajouter les autres détails sous forme de Labels
+        vbox.getChildren().add(new Label("🏝 Destination : " + offer.getDestination()));
+        vbox.getChildren().add(new Label("🚉 Départ : " + offer.getDeparture()));
+        vbox.getChildren().add(new Label("💰 Prix : " + offer.getPrice() + " DT"));
+        vbox.getChildren().add(new Label("🏨 Hôtel : " + offer.getHotelName()));
+        vbox.getChildren().add(new Label("✈️ Vol : " + offer.getFlightName()));
+        vbox.getChildren().add(new Label("📅 Départ : " + offer.getDeparture_date() + " - Arrivée : " + offer.getArrival_date()));
+        vbox.getChildren().add(new Label("📖 Description : " + offer.getDiscription()));
+        vbox.getChildren().add(new Label("🏢 Agence : " + (offer.getAgence() != null ? offer.getAgence().getNom() : "Non spécifiée")));
+        vbox.getChildren().add(new Label("🎁 Promotion : " + (offer.getPromotion() != null ? offer.getPromotion().getTitle() : "Aucune")));
+        vbox.getChildren().add(new Label("📂 Catégorie : " + offer.getCategory()));
+
+        // Définir le VBox comme contenu de l'Alert
+        detailAlert.getDialogPane().setContent(vbox);
+
+        // Afficher l'Alert
         detailAlert.showAndWait();
     }
 
-
-
-
-
+    public void navigateBack(ActionEvent actionEvent) {
+        Stage stage;
+        try {
+            ResourceBundle resourcesBundle = ResourceBundle.getBundle("tn.esprit.easytripdesktopapp.i18n.messages", Locale.getDefault());
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("/tn/esprit/easytripdesktopapp/FXML/Admin/TablesAdmin.fxml"), resourcesBundle);
+            Parent root = loader.load();
+            stage = (Stage) ((Node) actionEvent.getSource()).getScene().getWindow();
+            stage.setScene(new Scene(root));
+            stage.setTitle("Login Screen");
+            stage.show();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
 }
